# cloudcent-cli

./: .gitignore  .gitmodules  Cargo.toml  README.md  action.yml  go.mod  go.sum  install.ps1  install.sh
.github/workflows/: integration-tests.yml  release.yml  test-action.yml
cmd/: diagram.go  pulumi.go  root.go
examples/workflows/: cost-guardrail-raw.yml  cost-guardrail.yml
integration_tests/: run-guardrail-tests.sh  run-tests.sh
integration_tests/snapshots/pulumi/: aws-py-apigatewayv2-http-api-quickcreate.json  aws-py-appsync.json  aws-py-eks.json  aws-py-fargate.json  aws-py-redshift-glue-etl.json  aws-py-resources.json  aws-py-s3-folder.json  aws-py-secrets-manager.json  aws-py-voting-app.json  aws-py-webserver.json  aws-py-wordpress-fargate-rds.json  azure-py-aci.json  azure-py-cosmosdb-logicapp.json  azure-py-static-website.json  azure-py-webserver.json
internal/api/: client.go  models.go
internal/config/: config.go
internal/estimate/: estimator.go  estimator_test.go  guardrail.go  print.go
internal/pulumi/: mapper.go  mapper_test.go  mock_resource_collector.go
internal/pulumi/resources/: model.go
internal/pulumi/resources/aws/: apigateway.go  appsync.go  athena.go  cloudfront.go  dynamodb.go  ec2.go  (+9 more)
npm/cloudcent/: package.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/win32-arm64/: package.json
npm/win32-x64/: package.json
scripts/: render_comment.py
src/api/: client.rs
src/tui/: app.rs
src/tui/views/: history.rs  pricing.rs  settings.rs
(+4 files in other folders)
