[package]
name = "cloudcent"
version = "0.0.1-beta"
edition = "2024"

[features]
estimate = []

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.11.27", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rustyline = "17.0.2"
shlex = "1.3.0"
figlet-rs = "0.1.5"
comfy-table = "7.2.1"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
dirs = "6.0.0"
serde_yaml = "0.9"
ratatui = "0.28"
crossterm = "0.28"
tui-input = "0.10"
tui-textarea = "0.6"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tiny_http = "0.12"
fuzzy-matcher = "0.3"
open = "5.0"
urlencoding = "2.1"
flate2 = "1.0"
indexmap = { version = "2", features = ["serde"] }
